--- a/styles/style.css
+++ b/styles/style.css
@@ -105,40 +105,20 @@
 
 /*******TARJETAS INDEX*******/
 
-.tarjetas-section {
-    padding: 4rem;
-    display: flex;
-    justify-content: space-between;
-    gap: 3rem;
-
-}
-.tarjetas-section > * {
-    flex-grow: 1;
- }
-
- .tarjeta-div {
-    padding: 2rem;
-    width: 100%;
-    max-width: none;
-    min-width: 300px;
-    
+.btn {
+    background-color: rgb(200, 176, 223);
 }
 
-.tarjeta-titulo {
-    font-size: 20px;
-    text-align: center;
 
 
-}
 
-.tarjeta-parrafo {
-font-size: 14px;
-}
+ 
 
-.tarjeta-imagen {
-    width: 100%;
-    display: block;
-}
+
+
+
+
+
 
 .tarjeta-boton {
     background-color: rgb(200, 176, 223);
@@ -150,12 +130,6 @@ font-size: 14px;
 }
  
 /****TARJETAS PRODUCTOS****/
-.container {
-    width: 90%;
-    max-width: 1200px;
-    margin: 0 auto;
-
-}
 
 .tarjetas-productos {
     padding: 1rem;
@@ -258,12 +232,6 @@ font-size: 14px;
 
 }
 
- .card-body {
-    background-color: rgb(180, 177, 216);
-    text-align:center;
-
- }
-
 
 /**formulario**/
 
@@ -275,12 +243,7 @@ font-size: 14px;
   border-radius: 1em;
  }
 
-.container {
-        display: flex;
-        flex-direction: wrap;
-        justify-content: space-around;
-        padding: 20px;
-    }
+
 
     .titulo-formulario {
         display:flex;
@@ -291,12 +254,5 @@ font-size: 14px;
 
 
 
- @media(min-width: 480px){
-    .container {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 15px;
-        
-    }
- }
+ 
  
